Getting a full SEM dataset with new cleaning strategies AND running the model with the new dataset and getting visualizations out of the results

--- a/Parks data cleaning/bimler_code_data_wrangle.Rmd
+++ b/Parks data cleaning/bimler_code_data_wrangle.Rmd
@@ -13,17 +13,17 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(stringr)
 
-wir_focals_dat <- read.csv("focals/wir fitness(WIR diverse focals).csv")
-wir_neighborhoods_data <- read.csv("neighborhoods/wir fitness(WIR neighborhoods).csv")
-
-br_focals_dat <- read.csv("focals/br fitness(BR diverse focals).csv")
-br_neighborhoods_data <- read.csv("neighborhoods/br fitness(BR neighborhoods).csv")
+# wir_focals_dat <- read.csv("focals/wir fitness(WIR diverse focals).csv")
+# wir_neighborhoods_data <- read.csv("neighborhoods/wir fitness(WIR neighborhoods).csv")
+# 
+# br_focals_dat <- read.csv("focals/br fitness(BR diverse focals).csv")
+# br_neighborhoods_data <- read.csv("neighborhoods/br fitness(BR neighborhoods).csv")
 
 sem_focals_dat <- read.csv("focals/sem fitness(SEM diverse focals.csv")
 sem_neighborhoods_data <- read.csv("neighborhoods/sem fitness(sem neighborhoods).csv")
 
-rf_focals_dat <- read.csv("focals/riverfront fitness(Riverfront Diverse focals).csv")
-rf_neighborhoods_data <- read.csv("neighborhoods/riverfront fitness(RIVERFRONT neighborhoods.csv")
+# rf_focals_dat <- read.csv("focals/riverfront fitness(Riverfront Diverse focals).csv")
+# rf_neighborhoods_data <- read.csv("neighborhoods/riverfront fitness(RIVERFRONT neighborhoods.csv")
 
 ```
 
@@ -55,6 +55,8 @@ sem_neighbors_filtered <- sem_neighborhoods_data[sem_neighborhoods_data$`focal c
 
 # modifying column names so that names are more accurate, getting rid of rows that have the note: GONE
 ```{r}
+
+# 11/19: just realized this is only true for Nav and Collom? Because for the rest of the plants we got, we would've gotten exact counts of fruits?
 
 # TOPFR is number of fruits on the top infloresence
 sem_focals_dat <- sem_focals_dat %>% 
@@ -207,7 +209,11 @@ print(rows_with_na_fruits)
 # basically all of the NAs are EPIDEN, of 28 na fruit values, there's two collom, 1 navsqu, and 1 gilcap 
 # TODO: rethinking how to go about getting the epiden fruit values, would an average of the fruit counts we do have be oversimplifying it too much?
 
+sem_epidens <- sem_updated_focals[sem_updated_focals$SPECIES == "EPIDEN" , ]
+  # we have the fruit counts of 8 EPIDEN, out of 32
 
+# TODO: for now, just getting rid of all NAs
+sem_updated_focals <- na.omit(sem_updated_focals)
 ```
 
 
@@ -301,6 +307,7 @@ merge_neighbor_fitness <- function(focal_data, neighborhood_data){
 neighborhood_focal_br <- merge_neighbor_fitness(br_updated_focals, br_neighborhoods_data)
 neighborhood_focal_rf <- merge_neighbor_fitness(rf_updated_focals, rf_neighborhoods_data)
 neighborhood_focal_wir <- merge_neighbor_fitness(wir_updated_focals, wir_neighborhoods_data)
+neighborhood_focal_sem <- merge_neighbor_fitness(sem_updated_focals, sem_neighbors_filtered)
 
 
 common_cols <- intersect(colnames(sem_focals_dat), colnames(sem_neighborhoods_data))
@@ -330,7 +337,7 @@ neighborhood_focal_sem <- neighborhood_focal_sem %>% rename(seeds = fruits)
 # dropping any rows that dont have a final_fruit_count
 neighborhood_focal_sem <- neighborhood_focal_sem %>% filter(!is.na(seeds))
 
-# trying to alphabetize the weed columns while leaving out seeds and focal
+# trying to alphabetize the weed columns while leaving out seeds and focal and PLOT
 
 # Specify the columns to leave out or move to the front
 columns_to_exclude <- c("focal", "seeds", "PLOT")
@@ -412,9 +419,25 @@ all_alones <- read.csv("fitness alone focals(ALL alone focals).csv")
 all_alones <- all_alones %>% 
   mutate(TOTALFR = coalesce(EXACTFR, fr1))
 
+colnames(all_alones)
+
+# TODO: think through the column name changes 
+# TOPFR is number of fruits on the top infloresence
+all_alones <- all_alones %>% 
+    rename("TOP_INFL_FR" = "TOPFR")
+
+# TOTALFR is the total number of infloresences 
+all_alones <- all_alones %>% 
+    rename("TOTAL_INFL" = "TOTALFR")
+
+# SIDEFR is the all_alones of fruits on side infl
+all_alones <- all_alones %>% 
+    rename("SIDE_INFL_FR" = "SIDEFR")
+
 # only want to apply the function to NAV and COLLOM 
 nav_and_collom <- c("NAVSQU", "COLLOM")
 nav_and_collom_alone <-  all_alones[all_alones$SPECIES %in% nav_and_collom, ]
+
 
 # applying function to the filtered nav/collom dataset
 nav_and_collom_alone$NEW_FRUIT_COUNT <- sapply(1:nrow(nav_and_collom_alone), function(row) calculate_new_fruit_count(row, nav_and_collom_alone))
@@ -424,7 +447,13 @@ all_alones <- merge(all_alones, nav_and_collom_alone[, c("SPECIES", "NEW_FRUIT_C
 
 # merge all of the different fruit counts into one column using coalesce 
 all_alones <- all_alones %>% 
-  mutate(fruits = coalesce(NEW_FRUIT_COUNT, EXACTFR, TOTALFR))
+  mutate(fruits = coalesce(NEW_FRUIT_COUNT, EXACTFR, TOTAL_INFL))
+
+
+unique(all_alones$notes)
+
+# removing all rows with notes 
+all_alones <- all_alones[!str_detect(all_alones$notes, "GONE|gone|dead|DEAD|herbivory|BT|GONE?|BS main stem"), ]
 
 # getting rid of all columns except for PARK, SPECIES, PLOT, fruits
 all_alones <- all_alones %>% select(PARK, SPECIES, PLOT, fruits)
@@ -434,6 +463,7 @@ all_alones <- all_alones %>%
     rename(focal = SPECIES, seeds = fruits)
 
 
+all_alones <- na.omit(all_alones)
 ```
 
 ```{r}
@@ -444,6 +474,7 @@ all_alones <- all_alones %>%
 alones_br <- all_alones %>% filter(PARK == "BR")
 alones_rf <- all_alones %>% filter(PARK == "RF")
 alones_wir <- all_alones %>% filter(PARK == "WIR")
+alones_sem <- all_alones %>% filter(PARK == "SEM")
 
 
 # find columns in diverse park data that are missing in the alones
@@ -461,13 +492,20 @@ missing_cols_wir <- setdiff(names(neighborhood_focal_wir), names(alones_wir))
 # add missing columns to alones_br, filling with 0s
 alones_wir[missing_cols_wir] <- 0
 
+
+# getting rid of park column
+alones_sem <- alones_sem %>% select(-PARK)
+# find columns in diverse park data that are missing in the alones
+missing_cols_sem <- setdiff(names(neighborhood_focal_sem), names(alones_sem))
+# add missing columns to alones_br, filling with 0s
+alones_sem[missing_cols_sem] <- 0
+
 # finalized datasets
 final_BR_data <- rbind(neighborhood_focal_br, alones_br)
 final_RF_data <- rbind(neighborhood_focal_rf, alones_rf)
 final_WIR_data <- rbind(neighborhood_focal_wir, alones_wir)
+final_SEM_data <- rbind(neighborhood_focal_sem, alones_sem)
 
-# # now filtering for SEM 
-# all_alones_sem <- all_alones %>% filter (PARK=="SEM")
 
 ```
 
@@ -501,13 +539,14 @@ wir_final_data <- wir_final_data %>%
 # [1,] 221  25
 wir_final_data <- wir_final_data[!apply(wir_final_data == "skip", 1, any), ]
 
+sem_final_data <- cleaning_to_final_dataset(final_SEM_data)
 
 #colnames(wir_final_data)
 # double checking
 #anyNA(wir_final_data)
 
 # saving it as a csv!
-#write.csv(sem_neighbor_focal_all, "sem_neighbor_focal_all_11_10.csv")
+write.csv(sem_final_data, "sem_final_data.csv")
 # write.csv(rf_final_data, "rf_final_data.csv")
 # write.csv(br_final_data, "br_final_data.csv")
 #write.csv(wir_final_data, "wir_final_data.csv")
