--- a/Parks data cleaning/bimler_code_data_wrangle.Rmd
+++ b/Parks data cleaning/bimler_code_data_wrangle.Rmd
@@ -56,7 +56,7 @@ sem_neighbors_filtered <- sem_neighborhoods_data[sem_neighborhoods_data$`focal c
 # modifying column names so that names are more accurate, getting rid of rows that have the note: GONE
 ```{r}
 
-# 11/19: just realized this is only true for Nav and Collom? Because for the rest of the plants we got, we would've gotten exact counts of fruits?
+# TODO: 11/19: just realized this is only true for Nav and Collom? Because for the rest of the plants we got, we would've gotten exact counts of fruits?
 
 # TOPFR is number of fruits on the top infloresence
 sem_focals_dat <- sem_focals_dat %>% 
@@ -71,21 +71,7 @@ sem_focals_dat <- sem_focals_dat %>%
     rename("SIDE_INFL_FR" = "SIDEFR")
 
 
-# TODO: Think about what to do about the rows with special notes like BT, BT no fruits?, couldn't find, BT Fruit gone (leaning towards just dropping these)
-#sem_focals_dat[sem_focals_dat$NOTES != "", ]
-# would mean dropping 18 rows out of 203 rows 
-# what are all the unique notes, how many are there 
-  # how many different variations of BT do we have 
-  # "BT", "BT no fruits?", "BT Fruit gone", "BT BAGGED \"11\"?"
-  # "GONE", "couldn't find", I think these ones can definitely be dropped 
-
-# these are looking at the notes/the exact instances of the notes
-# unique(sem_focals_dat$NOTES)
-# BT_sem <- sem_focals_dat[str_detect(sem_focals_dat$NOTES, "BT"), ]
-# GONE_sem <- sem_focals_dat[str_detect(sem_focals_dat$NOTES, "GONE|couldn't find"), ]
-
-
-# I want to drop all of these, dropping the BT ~10 of these and dropping the GONE/couldn't find rows, ~10 of these
+# dropping all rows with notes in them (BT/Gone)
 sem_focals_dat <- sem_focals_dat[!str_detect(sem_focals_dat$NOTES, "GONE|couldn't find|BT"), ]
 ```
 
@@ -100,9 +86,6 @@ sem_focals_dat <- sem_focals_dat[!str_detect(sem_focals_dat$NOTES, "GONE|couldn'
 ```{r}
 # doing the fruit count
 calculate_new_fruit_count <- function(row, data){
-  # calculating the average side and tops in the function
-    #TODO: this doesn't differentiate between nav and collomia, it's just taking the 
-        # averages of the entire column (need to make sure it's doing these separately)
   
   # identify species for the row
   species <- data[row, "SPECIES"]
@@ -110,7 +93,7 @@ calculate_new_fruit_count <- function(row, data){
   # filter data for current species
   species_data <- data[data$SPECIES == species, ]
   
-  
+  # TODO: 11/20 instead of averages, use a linear regression between height and # seeds
   average_top <- mean(species_data$TOP_INFL_FR, na.rm = TRUE)
   average_side <- mean(species_data$SIDE_INFL_FR, na.rm = TRUE)
   
@@ -128,8 +111,6 @@ calculate_new_fruit_count <- function(row, data){
               "TOP_INFL_FR:", data[row, "TOP_INFL_FR"], 
               "SIDE_INFL_FR:", data[row, "SIDE_INFL_FR"]))
 
-
-  # TODO: need to think of another way to deal with these, there's at least one instance where there is no total infl, but there is a side and/or top infl count
   if (is.na(data[row, "TOTAL_INFL"])) {
     print(paste("Row", row, "- Skipping because TOTAL_INFL is NA"))
     return(NA)
@@ -176,16 +157,6 @@ calculate_new_fruit_count <- function(row, data){
 # only want to apply the function to NAV and COLLOM 
 nav_and_collom <- c("NAVSQU", "COLLOM")
 
-
-# double checking averages, the function says top: 17.75, side: 2.12
-# nav_sem <-  sem_focals_dat[sem_focals_dat$SPECIES =="NAVSQU", ]
-# nav_sem_side_mean <- mean(nav_sem$TOP_INFL_FR, na.rm = TRUE)
-# nav_sem_top_mean <- mean(nav_sem$SIDE_INFL_FR, na.rm = TRUE)
-
-# collom_sem <-  sem_focals_dat[sem_focals_dat$SPECIES =="COLLOM", ]
-# collom_sem_side_mean <- mean(collom_sem$TOP_INFL_FR, na.rm = TRUE)
-# collom_sem_top_mean <- mean(collom_sem$SIDE_INFL_FR, na.rm = TRUE)
-
 ```
 
 # SEM fixing fruit counts 
@@ -230,12 +201,10 @@ sem_updated_focals <- rbind(sem_focals_dat_no_nav_or_collom, nav_and_collom_only
 # Show rows with NA in the 'fruits' column
 rows_with_na_fruits <- sem_updated_focals[is.na(sem_updated_focals$fruits), ]
 print(rows_with_na_fruits)
-# basically all of the NAs are EPIDEN, of 28 na fruit values, there's two collom, 1 navsqu, and 1 gilcap 
+# basically all of the NAs are EPIDEN, of 28 na fruit values, there's 2 collom, 1 navsqu, and 1 gilcap 
 # TODO: rethinking how to go about getting the epiden fruit values, would an average of the fruit counts we do have be oversimplifying it too much?
 
 sem_epidens <- sem_updated_focals[sem_updated_focals$SPECIES == "EPIDEN" , ]
-  # we have the fruit counts of 8 EPIDEN, out of 32
-mean_fruits_sem_epiden <- mean(sem_epidens$fruits, na.rm = TRUE)
 
 # TODO: for now, just getting rid of all NAs
 sem_updated_focals <- na.omit(sem_updated_focals)
@@ -354,7 +323,7 @@ neighborhood_focal_sem <- neighborhood_focal_sem %>% rename(seeds = fruits)
 # dropping any rows that dont have a final_fruit_count
 neighborhood_focal_sem <- neighborhood_focal_sem %>% filter(!is.na(seeds))
 
-# trying to alphabetize the weed columns while leaving out seeds and focal and PLOT
+# alphabetize the weed columns while leaving out seeds and focal and PLOT
 
 # Specify the columns to leave out or move to the front
 columns_to_exclude <- c("focal", "seeds", "PLOT")
@@ -532,8 +501,8 @@ final_SEM_data <- rbind(neighborhood_focal_sem, alones_sem)
 
 cleaning_to_final_dataset <- function(final_data){
 
-  # before saving it as a csv,for stan data we have to replace all nas with 0s!
-  # also have to force the doubles to be ints, so also means rounding any decimals
+  # before saving it as a csv,for stan data we have to replace all nas with 0s
+  # also have to make the doubles ints, so also means rounding any decimals
   neighbor_focal_all <- final_data %>%
     mutate_all(~ ifelse(is.na(.), 0, .)) %>%
     mutate_if(is.double, as.integer)
@@ -563,7 +532,7 @@ sem_final_data <- cleaning_to_final_dataset(final_SEM_data)
 #anyNA(wir_final_data)
 
 # saving it as a csv!
-write.csv(sem_final_data, "sem_final_data.csv")
+#write.csv(sem_final_data, "sem_final_data.csv")
 # write.csv(rf_final_data, "rf_final_data.csv")
 # write.csv(br_final_data, "br_final_data.csv")
 #write.csv(wir_final_data, "wir_final_data.csv")
